--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.25",
-    "dotenv": "^16.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -18,7 +16,6 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
 }
